--- a/server/package.json
+++ b/server/package.json
@@ -4,28 +4,24 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "watch": "nodemon",
+    "start": "nodemon server.js",
     "seed": "node config/seeds.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "apollo-server-core": "^3.10.2",
-    "apollo-server-express": "^3.10.2",
-    "aws-sdk": "^2.1213.0",
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "graphql": "^16.6.0",
-    "graphql-upload": "^13.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.0",
-    "stripe": "^10.8.0",
-    "uuid": "^9.0.0"
-  },
   "devDependencies": {
     "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
+    "stripe": "^11.2.0",
+    "uuid": "^9.0.0"
   }
 }
