--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
